--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <header>
         <a href="#">
             <div class="header-logo">
-                <h1>Joelma Matias</h1>
-                <h2>Assessoria e Soluções Documentais</h2>
+               <img src="imagens/logo.png" alt="">
             </div>
         </a>
 
