--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h2>Siga-me:</h2>
                     <hr>
                     <div class="redes-sociais">
-                        <a href="#">
+                        <a href="https://www.instagram.com/jm.administration/" target="_blank">
                             <div>
                                 <img src="imagens/instagram.png" alt="Instagram">
                             </div>
