--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id="home">
             <div class="home-text-container">
-                <h1>Gestão Estratégica, Segurança e Resultados!</h1>
+                <h1 class="fade.in">Gestão Estratégica, Segurança e Resultados!</h1>
                 <p>Aqui você encontrará soluções personalizadas nas áreas de Administração, Departamento Pessoal, Gestão de Pessoas, Segurança do Trabalho, Contratos e muito mais. Com experiência sólida e formação multidisciplinar, ofereço serviços estratégicos para empresas que buscam excelência, organização e conformidade.</p>
             </div>
         </section
