--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="#">
+        <a href="index.html">
             <div class="header-logo">
                <img src="imagens/logo.png" alt="">
             </div>
@@ -30,17 +30,17 @@
     </header>
     <main>
         <section id="home">
-            <div class="home-text-container">
-                <h1 class="fade.in">Gestão Estratégica, Segurança e Resultados!</h1>
+            <div class="home-text-container fade-in">
+                <h1>Gestão Estratégica, Segurança e Resultados!</h1>
                 <p>Aqui você encontrará soluções personalizadas nas áreas de Administração, Departamento Pessoal, Gestão de Pessoas, Segurança do Trabalho, Contratos e muito mais. Com experiência sólida e formação multidisciplinar, ofereço serviços estratégicos para empresas que buscam excelência, organização e conformidade.</p>
             </div>
         </section
         >
         <section id="sobre">
-            <div class="sobre-image-container">
-                <img src="imagens/negrinha.jpg" alt="">
+            <div class="sobre-image-container fade-in">
+                <img src="imagens/negrinha.jpg" alt="Joelma Matias">
             </div>
-            <div class="sobre-text-container">
+            <div class="sobre-text-container fade-in">
                 <h2>Sobre Mim</h2>
                 <hr>
                 <p>Sou formada em Administração de Empresas, com pós-graduação em Gestão Estratégica de Pessoas. Atualmente, curso o Técnico em Segurança do Trabalho e possuo formações complementares em Gestão de Cargos e Salários, Gestão de Contratos e Programação Neurolinguística (PNL).</p>
@@ -50,9 +50,9 @@
         </section>
 
         <section id="servicos">
-            <h2>Serviços</h2>
+            <h2 class="fade-in">Serviços</h2>
             <hr>
-            <div class="servicos-card-container">
+            <div class="servicos-card-container fade-in">
                 <div class="servicos-card">
                     <div class="colors"></div>
                     <img src="imagens/dp.png" alt="Departamento Pessoal">
