--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <footer id="contato">
             <div class="footer-content-container">
-                <div class="footer-left-container">
+                <div class="footer-left-container fade-in">
                     <h2>Entre em Contato</h2>
                     <hr>
                     <form action="scripts/contato.php" method="POST">
@@ -134,7 +134,7 @@
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
-                <div class="footer-right-container">
+                <div class="footer-right-container fade-in">
                     <h2>Siga-me:</h2>
                     <hr>
                     <div class="redes-sociais">
@@ -173,5 +173,6 @@
         </footer>
     </main>
     <a class="whatsapp-button" href="https://wa.me/47991181188" target="_blank"><img src="imagens/whatsapp.png" alt="WhatsApp"></a>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
