--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JM - Assessoria e Soluções Documentais</title>
+    <title>JM - Soluções Documentais</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-png">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
@@ -14,12 +14,12 @@
 <body>
     <header>
         <a href="index.html">
-            <div class="header-logo">
-               <img src="imagens/logo.png" alt="">
+            <div class="header-logo fade-in">
+               <img src="imagens/logo.png" alt="Joelma Matias - Soluções Documentais">
             </div>
         </a>
 
-        <nav class="nav-bar">
+        <nav class="nav-bar fade-in">
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#sobre">Sobre Mim</a></li>
