--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
     <header class="header-pc">
-
         <a href="index.html">
             <div class="header-pc-logo fade-in">
                <img src="imagens/logo.png" alt="Joelma Matias - Soluções Documentais">
             </div>
         </a>
-
-        <nav class="nav-bar-pc">
+        <nav class="nav-bar-pc fade-in">
             <ul class="nav-list-pc">
                 <li class="nav-item-pc"><a class="nav-link-pc" href="#home">Home</a></li>
                 <li class="nav-item-pc"><a class="nav-link-pc" href="#sobre">Sobre Mim</a></li>
@@ -26,8 +24,6 @@
             </ul>
         </nav>
     </header>
-
-    
     <div class="header-mobile">
         <nav class="nav-bar-mobile fade-in">
             <a href="index.html">
@@ -39,7 +35,6 @@
                 <button onclick="menuShow()"><img src="imagens/menu.png" alt="Menu" class="icon"></button>
             </div>
         </nav>
-
         <div class="mobile-menu">
             <ul>
                 <li class="nav-item-mobile"><a class="nav-link-mobile" href="#home">Home</a></li>
@@ -49,16 +44,13 @@
             </ul>
         </div>
     </div>
-   
- 
     <main>
         <section id="home">
             <div class="home-text-container fade-in">
                 <h1>Gestão Estratégica, Segurança e Resultados!</h1>
                 <p>Aqui você encontrará soluções personalizadas nas áreas de Administração, Departamento Pessoal, Gestão de Pessoas, Segurança do Trabalho, Contratos e muito mais. Com experiência sólida e formação multidisciplinar, ofereço serviços estratégicos, para empresas que buscam excelência, organização e conformidade.</p>
             </div>
-        </section
-        >
+        </section>
         <section id="sobre">
             <div class="sobre-image-container fade-in">
                 <img src="imagens/joelma.png" alt="Joelma Matias">
@@ -71,7 +63,6 @@
                 <p>Acredito na atualização constante, no atendimento humanizado e na entrega de soluções práticas e eficazes para empresas e profissionais.</p>
             </div>
         </section>
-
         <section id="servicos">
             <h2 class="fade-in">Serviços</h2>
             <hr>
@@ -93,7 +84,6 @@
                     </div>
                     <div class="colors"></div>
                 </div>
-
                 <div class="servicos-card" onclick="toggleCard(this)">
                     <div class="colors"></div>
                     <img src="imagens/gdp.png" alt="Gestão de Pessoas">
@@ -176,7 +166,6 @@
             </div>
             <hr>
         </section>
-
         <footer id="contato">
             <div class="footer-content-container">
                 <div class="footer-left-container fade-in">
@@ -188,7 +177,7 @@
                         <label for="email">E-mail</label>
                         <input type="email" id="email" name="email" required />
                         <label for="mensagem">Mensagem</label>
-                        <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+                        <textarea id="mensagem" name="mensagem" rows="5" required ></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
