--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>JM - Soluções Documentais</title>
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-png">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/estilo.css">
 </head>
 <body>
-    <header class="header-pc">
+    <header>
         <a href="index.html">
-            <div class="header-pc-logo fade-in">
-               <img src="imagens/logo.png" alt="Joelma Matias - Soluções Documentais">
-            </div>
+            <img class="logo fade-in" src="imagens/logo.png" alt="Joelma Matias - Soluções Documentais" >
         </a>
-        <nav class="nav-bar-pc fade-in">
-            <ul class="nav-list-pc">
-                <li class="nav-item-pc"><a class="nav-link-pc" href="#home">Home</a></li>
-                <li class="nav-item-pc"><a class="nav-link-pc" href="#sobre">Sobre Mim</a></li>
-                <li class="nav-item-pc"><a class="nav-link-pc" href="#servicos">Serviços</a></li>
-                <li class="nav-item-pc"><a class="nav-link-pc" href="#contato">Contato</a></li>
+        <nav class="nav-bar fade-in">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#sobre">Sobre Mim</a></li>
+                <li class="nav-item"><a class="nav-link" href="#servicos">Serviços</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
+
     <div class="header-mobile">
         <nav class="nav-bar-mobile fade-in">
             <a href="index.html">
-                <div class="header-logo-mobile fade-in">
+                <div class="logo-mobile fade-in">
                     <img src="imagens/logo.png" alt="Joelma Matias - Soluções Documentais">
                 </div>
             </a>
@@ -36,7 +35,7 @@
             </div>
         </nav>
         <div class="mobile-menu">
-            <ul>
+            <ul class="nav-list-mobile">
                 <li class="nav-item-mobile"><a class="nav-link-mobile" href="#home">Home</a></li>
                 <li class="nav-item-mobile"><a class="nav-link-mobile" href="#sobre">Sobre Mim</a></li>
                 <li class="nav-item-mobile"><a class="nav-link-mobile" href="#servicos">Serviços</a></li>
@@ -44,6 +43,7 @@
             </ul>
         </div>
     </div>
+
     <main>
         <section id="home">
             <div class="home-text-container fade-in">
@@ -51,6 +51,7 @@
                 <p>Aqui você encontrará soluções personalizadas nas áreas de Administração, Departamento Pessoal, Gestão de Pessoas, Segurança do Trabalho, Contratos e muito mais. Com experiência sólida e formação multidisciplinar, ofereço serviços estratégicos, para empresas que buscam excelência, organização e conformidade.</p>
             </div>
         </section>
+
         <section id="sobre">
             <div class="sobre-image-container fade-in">
                 <img src="imagens/joelma.png" alt="Joelma Matias">
@@ -63,16 +64,16 @@
                 <p>Acredito na atualização constante, no atendimento humanizado e na entrega de soluções práticas e eficazes para empresas e profissionais.</p>
             </div>
         </section>
+
         <section id="servicos">
             <h2 class="fade-in">Serviços</h2>
             <hr>
-
             <div class="servicos-card-container fade-in">
                 <div class="servicos-card" onclick="toggleCard(this)">
                     <div class="colors"></div>
                     <img src="imagens/dp.png" alt="Departamento Pessoal">
                     <h3>Departamento Pessoal</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Admissão e desligamento de colaboradores</li>
@@ -88,7 +89,7 @@
                     <div class="colors"></div>
                     <img src="imagens/gdp.png" alt="Gestão de Pessoas">
                     <h3>Gestão de Pessoas</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Estruturação de cargos e salários</li>
@@ -104,7 +105,7 @@
                     <div class="colors"></div>
                     <img src="imagens/seg.png" alt="Segurança do Trabalho">
                     <h3>Segurança do Trabalho</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Elaboração e controle de documentos legais (PGR, PCMSO, LTCAT etc.)</li>
@@ -120,7 +121,7 @@
                     <div class="colors"></div>
                     <img src="imagens/contratos.png" alt="Gestão de Contratos">
                     <h3>Gestão de Contratos</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Elaboração e análise contratual</li>
@@ -135,7 +136,7 @@
                     <div class="colors"></div>
                     <img src="imagens/pericia.png" alt="Perícia e Administração Judicial">
                     <h3>Perícia e Administração Judicial</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Atuação como Administradora Judicial em processos judiciais</li>
@@ -149,7 +150,7 @@
                     <div class="colors"></div>
                     <img src="imagens/condominio.png" alt="Perícia e Administração Judicial">
                     <h3>Administração de Condomínios</h3>
-                    <button class="vermais"><img src="imagens/more.png" alt="Ver Mais" class="vermaisimg"></button>
+                    <button class="btn-vermais"><img src="imagens/more.png" alt="Ver Mais" class="btn-vermais-img"></button>
                     <div class="card-full-content">
                         <ul>
                             <li>Gestão financeira e Administração de pessoal</li>
@@ -171,7 +172,7 @@
                 <div class="footer-left-container fade-in">
                     <h2>Entre em Contato</h2>
                     <hr>
-                    <form action="scripts/contato.php" method="POST">
+                    <form action="https://formspree.io/f/xoveypdz" method="POST">
                         <label for="nome">Nome</label>
                         <input type="text" id="nome" name="nome" required/>
                         <label for="email">E-mail</label>
@@ -196,7 +197,7 @@
                         <h3>Outras Formas de Contato:</h3>
                         <ul>
                             <li><span class="material-symbols-outlined">
-                                mail</span>E-mail: joelmamatias@gmail.com</li>
+                                mail</span>E-mail: comercial@jmadministration.com.br</li>
                             <li><span class="material-symbols-outlined">
                                 call</span>Telefone: 47 9118-1188</li>
                         </ul>
